--- a/src/app/bills/show-bill.component.scss
+++ b/src/app/bills/show-bill.component.scss
@@ -1,3 +1,4 @@
+@import "~src/palette";
 /deep/ .newBillTextarea {
   height: 200px;
   max-height: 200px;
@@ -8,7 +9,7 @@
     resize: none;
   }
   &::placeholder {
-    color: #66FCF1;
+    color: $textBlack;
   }
 }
 
@@ -33,8 +34,15 @@
     width: 95%;
   }
 
+  @media (max-width: 899px) {
+    width: 95%;
+    background-color: #EC2929 !important;
+  }
+
   &:hover {
-    //background-color: #EC2929;
+    @media (min-width: 900px) {
+      background-color: #EC2929 !important;
+    }
     //color: white;
   }
 }
@@ -44,19 +52,33 @@
 }
 
 button {
-  border-radius: 50px;
-  background-color: #1F2833 !important;
-  color: #66FCF1 !important;
+  font-weight: 300;
+  border-radius: 0;
+  background-color: $backgroundSilver !important;
+  color: $textBlack !important;
+  border: 1px solid $button;
+  transition: background-color 500ms ease, color 500ms ease, border 500ms ease;
+  &:hover {
+    @media (min-width: 900px) {
+      background-color: $button !important;
+      color: $textWhite !important;
+      transition: background-color 500ms ease, color 500ms ease;
+    }
+  }
+  @media (max-width: 899px) {
+    background-color: $button !important;
+    color: $textWhite !important;
+  }
 }
 
 /deep/ .mat-dialog-container {
-  background-color: #0B0C10 !important;
-  color: #66FCF1 !important;
-  border: 1px solid lightgray;
-  border-radius: 5px;
+  background-color: $backgroundSilver !important;
+  color: $textBlack !important;
+  border: 1px solid $borderBlue;
+  border-radius: 0px;
   box-shadow: 0px 10px 20px rgba(128,128,128,0.5);
 }
 
 /deep/ .mat-form-field-appearance-legacy .mat-form-field-underline {
-  background-color: #66FCF1 !important;
+  background-color: black !important;
 }
