--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,3 +1,4 @@
+@import "~src/palette";
 .sidenav-container {
   height: 100%;
 }
@@ -14,7 +15,7 @@
   position: sticky;
   top: 0;
   z-index: 1;
-  border-bottom: 1px solid #66FCF1;
+  border-bottom: 1px solid $borderBlue;
 }
 
 .logout {
@@ -58,25 +59,39 @@
 }
 
 /deep/ .mat-toolbar {
-  background-color: #0B0C10 !important;
-  color: #66FCF1 !important;
+  background-color: $backgroundSilver !important;
+  color: $textBlack !important;
+  font-weight: 400;
 }
 
 /deep/ .mat-sidenav-content {
-  background-color: #0B0C10 !important;
+  background-color: $backgroundSilver !important;
 }
 
 /deep/ .mat-sidenav {
-  background-color: #0B0C10 !important;
-  color: #66FCF1 !important;
-  border-right: 1px solid #66FCF1;
+  background-color: $backgroundSilver !important;
+  color: $textBlack !important;
+  border-right: 1px solid $borderBlue;
 }
 
 /deep/ app-menu-list-item {
   a {
-    background-color: #1F2833 !important;
-    color: #66FCF1 !important;
-    //border-bottom: 1px solid;
+    background-color: $backgroundSilver !important;
+    color: $textBlack !important;
+    border-bottom: 1px solid $borderBlue;
+    transition: background-color 500ms ease, color 500ms ease, border-bottom 500ms ease;
+    &:hover {
+      @media (min-width: 900px) {
+        background-color: $button !important;
+        color: $textWhite !important;
+        transition: background-color 500ms ease, color 500ms ease;
+      }
+    }
+    @media (max-width: 899px) {
+      background-color: $button !important;
+      color: $textWhite !important;
+      border-bottom: 1px solid $borderSilver;
+    }
   }
 }
 
@@ -85,9 +100,23 @@
 }
 
 button {
-  border-radius: 50px;
-  background-color: #1F2833 !important;
-  color: #66FCF1 !important;
+  font-weight: 300;
+  border-radius: 0;
+  background-color: $backgroundSilver !important;
+  color: $textBlack !important;
+  border: 1px solid $button;
+  transition: background-color 500ms ease, color 500ms ease, border 500ms ease;
+  &:hover {
+    @media (min-width: 900px) {
+      background-color: $button !important;
+      color: $textWhite !important;
+      transition: background-color 500ms ease, color 500ms ease;
+    }
+  }
+  @media (max-width: 899px) {
+    background-color: $button !important;
+    color: $textWhite !important;
+  }
 }
 
 .subscribePushNotificationButton {
