--- a/src/app/graph/graph.component.scss
+++ b/src/app/graph/graph.component.scss
@@ -1,3 +1,4 @@
+@import "~src/palette";
 @media (max-width: 767px) {
   .mobileGraph {
     zoom: 200%;
@@ -38,20 +39,20 @@
 }
 
 .graph {
-  background-color: #0B0C10;
-  color: #66FCF1;
+  background-color: $backgroundSilver;
+  color: $textBlack;
 }
 
 /deep/ .mat-select-value {
-  color: #66FCF1 !important;
+  color: $textBlack !important;
 }
 
 /deep/ .mat-form-field.mat-focused .mat-form-field-label {
-  color: #66FCF1 !important;
+  color: $textBlack !important;
 }
 
 /deep/ .mat-form-field-appearance-legacy .mat-form-field-label {
-  color: #66FCF1 !important;
+  color: $textBlack !important;
 }
 
 /deep/ .mat-form-field.mat-form-field-invalid .mat-form-field-label {
@@ -66,19 +67,23 @@
 }
 
 /deep/ .mat-form-field.mat-focused .mat-form-field-ripple {
-  background-color: #66FCF1 !important;
+  background-color: black !important;
 }
 
 /deep/ .mat-select-arrow-wrapper {
-  background-color: #66FCF1 !important;
+  background-color: $backgroundSilver !important;
+}
+
+/deep/ .mat-select-arrow {
+  color: $selectArrow !important;
 }
 
 /deep/ .mat-input-element:disabled {
-  color: #66FCF1 !important;
+  color: $textBlack !important;
 }
 
 /deep/ svg {
-  color: #66FCF1 !important;
+  color: $backgroundBlue !important;
 }
 
 /deep/ .dashboard-content {
@@ -88,13 +93,27 @@
 }
 
 button {
-  border-radius: 50px;
-  background-color: #1F2833 !important;
-  color: #66FCF1 !important;
+  font-weight: 300;
+  border-radius: 0;
+  background-color: $backgroundSilver !important;
+  color: $textBlack !important;
+  border: 1px solid $button;
+  transition: background-color 500ms ease, color 500ms ease, border 500ms ease;
+  &:hover {
+    @media (min-width: 900px) {
+      background-color: $button !important;
+      color: $textWhite !important;
+      transition: background-color 500ms ease, color 500ms ease;
+    }
+  }
+  @media (max-width: 899px) {
+    background-color: $button !important;
+    color: $textWhite !important;
+  }
 }
 
 .priceColumn {
-  border-bottom: 1px solid #66FCF1;
+  border-bottom: 1px solid $borderBlue;
 }
 
 .pieChart {
@@ -106,9 +125,16 @@ button {
 }
 
 /deep/ .mat-form-field-appearance-legacy .mat-form-field-underline {
-  background-color: #66FCF1 !important;
+  background-color: black !important;
 }
 
 /deep/ rect {
-  fill: #0B0C10 !important;
+  fill: $backgroundSilver !important;
+}
+
+.clearButton {
+  @media (max-width: 360px) {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
