--- a/src/app/profile/change_password.scss
+++ b/src/app/profile/change_password.scss
@@ -1,3 +1,4 @@
+@import "~src/palette";
 .passwordStrengthInfo {
   font-size: 14px;
 
@@ -11,29 +12,43 @@
 }
 
 .green {
-  color: #66FCF1;
+  color: green;
 }
 
 button {
-  border-radius: 50px;
-  background-color: #1F2833 !important;
-  color: #66FCF1 !important;
+  font-weight: 300;
+  border-radius: 0;
+  background-color: $backgroundSilver !important;
+  color: $textBlack !important;
+  border: 1px solid $button;
+  transition: background-color 500ms ease, color 500ms ease, border 500ms ease;
+  &:hover {
+    @media (min-width: 900px) {
+      background-color: $button !important;
+      color: $textWhite !important;
+      transition: background-color 500ms ease, color 500ms ease;
+    }
+  }
+  @media (max-width: 899px) {
+    background-color: $button !important;
+    color: $textWhite !important;
+  }
 }
 
 /deep/ .mat-dialog-container {
-  background-color: #0B0C10 !important;
-  color: #66FCF1 !important;
-  border: 1px solid lightgray;
-  border-radius: 5px;
+  background-color: $backgroundSilver !important;
+  color: $textBlack !important;
+  border: 1px solid $borderBlue;
+  border-radius: 0px;
   box-shadow: 0px 10px 20px rgba(128,128,128,0.5);
 }
 
 /deep/ .mat-form-field.mat-focused .mat-form-field-label {
-  color: #66FCF1 !important;
+  color: $textBlack !important;
 }
 
 /deep/ .mat-form-field-appearance-legacy .mat-form-field-label {
-  color: #66FCF1 !important;
+  color: $textBlack !important;
 }
 
 /deep/ .mat-form-field.mat-form-field-invalid .mat-form-field-label {
@@ -48,21 +63,25 @@ button {
 }
 
 /deep/ .mat-select-value {
-  color: #66FCF1 !important;
+  color: $textBlack !important;
 }
 
 /deep/ .mat-form-field.mat-focused .mat-form-field-ripple {
-  background-color: #66FCF1 !important;
+  background-color: black !important;
 }
 
 /deep/ .mat-select-arrow-wrapper {
-  background-color: #66FCF1 !important;
+  background-color: $backgroundSilver !important;
+}
+
+/deep/ .mat-select-arrow {
+  color: $selectArrow !important;
 }
 
 /deep/ .mat-progress-bar-fill::after {
-  background-color: #45A29E !important;
+  background-color: $backgroundBlue !important;
 }
 
 /deep/ .mat-form-field-appearance-legacy .mat-form-field-underline {
-  background-color: #66FCF1 !important;
+  background-color: black !important;
 }
