--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="row applicationInfo">
+<div class="row applicationInfo p-1">
   <div class="col-md-12 col-sm-12 mt-1 pr-1 infoHeader">
     <i class="material-icons">
       keyboard_arrow_right
