--- a/src/app/bills/bills.component.html
+++ b/src/app/bills/bills.component.html
@@ -117,27 +117,27 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <div class="col-md-5 col-sm-9">
+      <div class="col-md-5 col-sm-9 col-xs-9">
         <mat-form-field class="w-100">
           <input matInput [matDatepicker]="pickerFrom" [(ngModel)]="dateFrom" placeholder="{{ _translation('Date from', langCode) }}" disabled (dateChange)="onChange($event, 'dateFrom')">
           <mat-datepicker-toggle matSuffix [for]="pickerFrom"></mat-datepicker-toggle>
           <mat-datepicker touchUi #pickerFrom disabled="false"></mat-datepicker>
         </mat-form-field>
       </div>
-      <div class="col-md-1 col-sm-3">
-        <div class="text-right p-1">
+      <div class="col-md-1 col-sm-3 col-xs-3">
+        <div class="text-right p-1 clearButton">
           <button type="button" mat-raised-button color="primary" class="btn-block" (click)="clearDateFrom()">{{ _translation('Clear', langCode) }}</button>
         </div>
       </div>
-      <div class="col-md-5 col-sm-9">
+      <div class="col-md-5 col-sm-9 col-xs-9">
         <mat-form-field class="w-100">
           <input matInput [matDatepicker]="pickerTo" [(ngModel)]="dateTo" placeholder="{{ _translation('Date to', langCode) }}" disabled (dateChange)="onChange($event, 'dateTo')">
           <mat-datepicker-toggle matSuffix [for]="pickerTo"></mat-datepicker-toggle>
           <mat-datepicker touchUi #pickerTo disabled="false"></mat-datepicker>
         </mat-form-field>
       </div>
-      <div class="col-md-1 col-sm-3">
-        <div class="text-right p-1">
+      <div class="col-md-1 col-sm-3 col-xs-3">
+        <div class="text-right p-1 clearButton">
           <button type="button" mat-raised-button color="primary" class="btn-block" (click)="clearDateTo()">{{ _translation('Clear', langCode) }}</button>
         </div>
       </div>
@@ -173,7 +173,7 @@
       <div class="col-md-12" *ngIf="bills$.length > 0">
         <h4>{{ _translation('Results', langCode) }}</h4>
       </div>
-      <div class="col-md-12 col-sm-12 mt-2 mat-elevation-z8" *ngIf="bills$.length > 0" style="overflow-x: scroll">
+      <div class="col-md-12 col-sm-12 mt-2 mat-elevation-z8" *ngIf="bills$.length > 0">
         <table mat-table [dataSource]="bills$" class="col-md-12 col-sm-12">
           <!-- Item Column -->
           <ng-container matColumnDef="title">
