--- a/src/app/bugs/bugs.component.scss
+++ b/src/app/bugs/bugs.component.scss
@@ -1,3 +1,4 @@
+@import "~src/palette";
 .messages {
   overflow-y: scroll;
   max-height: 500px;
@@ -13,10 +14,10 @@
 
 .message {
   border: 1px solid darkred;
-  border-radius: 5px;
   margin-bottom: 10px;
   min-height: 100px;
-  background-color: #1F2833;
+  background-color: $backgroundSilver;
+  color: $textBlack;
   //&:hover {
   //  box-shadow: 0px 10px 20px rgba(128,128,128,0.5);
   //  background-color: lightblue;
@@ -30,7 +31,21 @@
 }
 
 button {
-  border-radius: 50px;
-  background-color: #1F2833 !important;
-  color: #66FCF1 !important;
+  font-weight: 300;
+  border-radius: 0;
+  background-color: $backgroundSilver !important;
+  color: $textBlack !important;
+  border: 1px solid $button;
+  transition: background-color 500ms ease, color 500ms ease, border 500ms ease;
+  &:hover {
+    @media (min-width: 900px) {
+      background-color: $button !important;
+      color: $textWhite !important;
+      transition: background-color 500ms ease, color 500ms ease;
+    }
+  }
+  @media (max-width: 899px) {
+    background-color: $button !important;
+    color: $textWhite !important;
+  }
 }
