--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,12 +1,15 @@
+@import "~src/palette";
 .register {
   position: absolute;
   width: 500px;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  border: 1px solid lightgray;
-  border-radius: 5px;
+  border: 1px solid $borderBlue;
+  border-radius: 0px;
   box-shadow: 0px 10px 20px rgba(128,128,128,0.5);
+  background-color: $backgroundSilver;
+  color: $textBlack;
   @media (max-width: 767px) {
     border: unset;
     border-radius: unset;
@@ -56,25 +59,39 @@
 }
 
 .green {
-  color: #66FCF1;
+  color: green;
 }
 
 /deep/ svg {
-  color: #66FCF1 !important;
+  color: $backgroundBlue !important;
 }
 
 button {
-  border-radius: 50px;
-  background-color: #1F2833 !important;
-  color: #66FCF1 !important;
+  font-weight: 300;
+  border-radius: 0;
+  background-color: $backgroundSilver !important;
+  color: $textBlack !important;
+  border: 1px solid $button;
+  transition: background-color 500ms ease, color 500ms ease, border 500ms ease;
+  &:hover {
+    @media (min-width: 900px) {
+      background-color: $button !important;
+      color: $textWhite !important;
+      transition: background-color 500ms ease, color 500ms ease;
+    }
+  }
+  @media (max-width: 899px) {
+    background-color: $button !important;
+    color: $textWhite !important;
+  }
 }
 
 /deep/ .mat-form-field.mat-focused .mat-form-field-label {
-  color: #66FCF1 !important;
+  color: $textBlack !important;
 }
 
 /deep/ .mat-form-field-appearance-legacy .mat-form-field-label {
-  color: #66FCF1 !important;
+  color: $textBlack !important;
 }
 
 /deep/ .mat-form-field.mat-form-field-invalid .mat-form-field-label {
@@ -89,25 +106,29 @@ button {
 }
 
 /deep/ .mat-select-value {
-  color: #66FCF1 !important;
+  color: $textBlack !important;
 }
 
 /deep/ .mat-form-field.mat-focused .mat-form-field-ripple {
-  background-color: #66FCF1 !important;
+  background-color: black !important;
 }
 
 /deep/ .mat-select-arrow-wrapper {
-  background-color: #66FCF1 !important;
+  background-color: $backgroundSilver !important;
+}
+
+/deep/ .mat-select-arrow {
+  color: $selectArrow !important;
 }
 
 /deep/ .mat-progress-bar-fill::after {
-  background-color: #45A29E !important;
+  background-color: $backgroundBlue !important;
 }
 
 /deep/ .mat-input-element:disabled {
-  color: #66FCF1 !important;
+  color: $textBlack !important;
 }
 
 /deep/ .mat-form-field-appearance-legacy .mat-form-field-underline {
-  background-color: #66FCF1 !important;
+  background-color: black !important;
 }
