--- a/src/app/suggestions/suggestions.component.html
+++ b/src/app/suggestions/suggestions.component.html
@@ -2,7 +2,7 @@
   <h5> {{ _translation('Suggest suggestions', langCode)}} </h5>
   <div class="newSuggestion row mt-2">
     <div class="col-md-10"></div>
-    <div class="col-md-2 col-sm-12 text-right">
+    <div class="col-md-2 col-sm-12 text-right p-1">
       <button type="button" mat-raised-button color="primary" class="btn-block newBillButton" (click)="openDialogtSuggestSuggestion()">
         {{ _translation('Suggest', langCode)}}
       </button>
