--- a/src/app/register/register-confirmation.component.html
+++ b/src/app/register/register-confirmation.component.html
@@ -2,7 +2,7 @@
   <div >
     <h3>{{ _translation('Congratulation', langCode) }}</h3>
     <p>{{ _translation('You are successfully registered.', langCode) }}</p>
-    <p>{{ _translation('Please check your e-mail and use code to login!', langCode) }}</p>
+    <!--<p>{{ _translation('Please check your e-mail and use code to login!', langCode) }}</p>-->
   </div>
 </div>
 <div mat-dialog-actions class="w-100">
