--- a/src/app/register/register-confirmation.component.scss
+++ b/src/app/register/register-confirmation.component.scss
@@ -1,13 +1,28 @@
+@import "~src/palette";
 /deep/ .mat-dialog-container {
-  background-color: #0B0C10 !important;
-  color: #66FCF1 !important;
-  border: 1px solid lightgray;
-  border-radius: 5px;
+  background-color: $backgroundSilver !important;
+  color: $textBlack !important;
+  border: 1px solid $borderBlue;
+  border-radius: 0px;
   box-shadow: 0px 10px 20px rgba(128,128,128,0.5);
 }
 
 button {
-  border-radius: 50px;
-  background-color: #1F2833 !important;
-  color: #66FCF1 !important;
+  font-weight: 300;
+  border-radius: 0;
+  background-color: $backgroundSilver !important;
+  color: $textBlack !important;
+  border: 1px solid $button;
+  transition: background-color 500ms ease, color 500ms ease, border 500ms ease;
+  &:hover {
+    @media (min-width: 900px) {
+      background-color: $button !important;
+      color: $textWhite !important;
+      transition: background-color 500ms ease, color 500ms ease;
+    }
+  }
+  @media (max-width: 899px) {
+    background-color: $button !important;
+    color: $textWhite !important;
+  }
 }
