--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -116,4 +116,6 @@
     </div>
   </form>
 </div>
-<p class="mt-1 w-100 text-center report-problem">If you have any problem, send mail on privateewallet@gmail.com</p>
+<div class="report-problem text-center w-100">
+  <p class="mt-1 w-100 text-center">If you have any problem, send mail on privateewallet@gmail.com</p>
+</div>
