--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -10,7 +10,6 @@ mat-form-field {
   left: 50%;
   transform: translate(-50%,-50%);
   border: 1px solid $borderBlue;
-  //border-radius: 5px;
   box-shadow: 0px 10px 20px rgba(128,128,128,0.5);
   background-color: $backgroundSilver;
   color: $textBlack;
@@ -20,15 +19,19 @@ mat-form-field {
     box-shadow: unset;
     transform: unset;
     left: 0;
-    top: 0;
-    margin-top: 50%;
+    //top: 0;
+    //margin-top: 50%;
     padding: 0;
+    position: relative;
   }
 }
 
 .report-problem {
-  bottom: 0;
+  //bottom: 0;
   position: absolute;
+  @media (min-width: 900px) {
+    bottom: 0;
+  }
 }
 
 @media (max-width: 767px) {
