--- a/src/app/application/application.component.scss
+++ b/src/app/application/application.component.scss
@@ -16,8 +16,8 @@
 }
 
 .application {
-  border: 1px solid $borderBlue;
-  box-shadow: 0px 10px 20px rgba(128,128,128,0.5);
+  //border: 1px solid $borderBlue;
+  //box-shadow: 0px 10px 20px rgba(128,128,128,0.5);
   min-height: 700px;
   color: $textBlack;
   background-color: $backgroundSilver;
