--- a/src/app/bills/bills.component.scss
+++ b/src/app/bills/bills.component.scss
@@ -1,8 +1,8 @@
 @import "~src/palette";
 .bills {
-  border: 1px solid $borderBlue;
-  border-radius: 0px;
-  box-shadow: 0px 10px 20px rgba(128,128,128,0.5);
+  //border: 1px solid $borderBlue;
+  //border-radius: 0px;
+  //box-shadow: 0px 10px 20px rgba(128,128,128,0.5);
   min-height: 500px;
   background-color: $backgroundSilver;
   color: $textBlack;
