--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -1,8 +1,8 @@
 @import "~src/palette";
 .profile {
-  border: 1px solid $borderBlue;
+  //border: 1px solid $borderBlue;
   //border-radius: 5px;
-  box-shadow: 0px 10px 20px rgba(128,128,128,0.5);
+  //box-shadow: 0px 10px 20px rgba(128,128,128,0.5);
   min-height: 700px;
   color: $textBlack;
   background-color: $backgroundSilver;
