--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -1,7 +1,7 @@
 @import "~src/palette";
 .settings {
-  border: 1px solid lightgray;
-  box-shadow: 0px 10px 20px rgba(128,128,128,0.5);
+  //border: 1px solid lightgray;
+  //box-shadow: 0px 10px 20px rgba(128,128,128,0.5);
   min-height: 700px;
   background-color: $backgroundSilver;
   color: $textBlack;
