--- a/src/app/bills/bills.component.scss
+++ b/src/app/bills/bills.component.scss
@@ -30,7 +30,7 @@ tr.mat-footer-row {
   }
 }
 
-.newBillButton {
+.newBillButton, .clearAllFilters {
   //border: 1px solid black;
   @media (max-width: 767px) {
     width: 100%;
