--- a/src/app/bills/bills.component.html
+++ b/src/app/bills/bills.component.html
@@ -72,17 +72,23 @@
     </div>
   </div>
 
+  <div class="newBill row">
+    <div class="col-md-10"></div>
+    <div class="col-md-2 col-sm-12 text-right p-1">
+      <button type="button" mat-raised-button color="primary" class="btn-block newBillButton" (click)="openDialogNewBill(true)">{{ _translation('New bill', langCode) }}</button>
+    </div>
+  </div>
 
   <div class="filters p-1">
     <h3>{{ _translation('Filter by', langCode) }}</h3>
   </div>
   <div class="filters p-1">
     <div class="row">
-      <div class="col-md-4 col-sm-12">
+      <div class="col-md-3 col-sm-12">
         <mat-form-field class="desktopVersion">
           <mat-label>{{ _translation('Category', langCode) }}</mat-label>
-          <mat-select (selectionChange)="onChange($event, 'categoryId')">
-            <mat-option value=null>
+          <mat-select (selectionChange)="onChange($event, 'categoryId')" [(ngModel)]="categoryId">
+            <mat-option [value]=null>
               <p></p>
             </mat-option>
             <mat-option *ngFor="let category of categories$" [value]="category.id">
@@ -91,11 +97,11 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <div class="col-md-4 col-sm-12">
+      <div class="col-md-3 col-sm-12">
         <mat-form-field class="desktopVersion">
           <mat-label>{{ _translation('Sub category', langCode) }}</mat-label>
-          <mat-select (selectionChange)="onChange($event, 'subCategoryId')">
-            <mat-option value="null">
+          <mat-select (selectionChange)="onChange($event, 'subCategoryId')" [(ngModel)]="subCategoryId">
+            <mat-option [value]="null">
               <p></p>
             </mat-option>
             <mat-option *ngFor="let sub_category of subCategories$" [value]="sub_category.id">
@@ -104,15 +110,37 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <div class="col-md-4 col-sm-12">
-        <mat-form-field class="w-100">
+      <div class="col-md-3 col-sm-12">
+        <mat-form-field class="desktopVersion">
           <mat-label>{{ _translation('Currency', langCode) }}</mat-label>
-          <mat-select (selectionChange)="onChange($event, 'currencyId')">
-            <mat-option value="null">
+          <mat-select (selectionChange)="onChange($event, 'currencyId')" [(ngModel)]="currencyId">
+            <mat-option [value]="null">
               <p></p>
             </mat-option>
             <mat-option *ngFor="let currency of currencies$" [value]="currency.id">
               <p>{{ currency.code }}</p>
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="col-md-3 col-sm-12">
+        <mat-form-field class="w-100">
+          <mat-label>{{ _translation('Location', langCode) }}</mat-label>
+          <mat-select (selectionChange)="onChange($event, 'locationType')" [(ngModel)]="location">
+            <!--<mat-option value=null>-->
+              <!--<p></p>-->
+            <!--</mat-option>-->
+            <!--<mat-option value='True'>-->
+              <!--<p>{{ _translation('My city', langCode) }}</p>-->
+            <!--</mat-option>-->
+            <!--<mat-option value='False'>-->
+              <!--<p>{{ _translation('Not my city', langCode) }}</p>-->
+            <!--</mat-option>-->
+            <mat-option [value]="null">
+              <p></p>
+            </mat-option>
+            <mat-option *ngFor="let loc of locationChoices" [value]="loc.value">
+              <p>{{ _translation(loc.location, langCode) }}</p>
             </mat-option>
           </mat-select>
         </mat-form-field>
@@ -141,22 +169,6 @@
           <button type="button" mat-raised-button color="primary" class="btn-block" (click)="clearDateTo()">{{ _translation('Clear', langCode) }}</button>
         </div>
       </div>
-      <div class="col-md-4 col-sm-12">
-        <mat-form-field class="desktopVersion">
-          <mat-label>{{ _translation('Location', langCode) }}</mat-label>
-          <mat-select (selectionChange)="onChange($event, 'locationType')">
-            <mat-option value=null>
-              <p></p>
-            </mat-option>
-            <mat-option value='True'>
-              <p>{{ _translation('My city', langCode) }}</p>
-            </mat-option>
-            <mat-option value='False'>
-              <p>{{ _translation('Not my city', langCode) }}</p>
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
       <div class="col-md-12 col-sm-12 search">
           <div>
             <form class="example-form">
@@ -169,6 +181,10 @@
             <div class="searchInput"><input type="text" placeholder="Search"></div-->
           </div>
           <div></div>
+      </div>
+      <div class="col-md-10 col-sm-0"></div>
+      <div class="col-md-2 col-sm-12 text-right">
+        <button type="button" mat-raised-button color="primary" class="btn-block clearAllFilters" (click)="clearAllFilters()">{{ _translation('Clear all filters', langCode) }}</button>
       </div>
       <div class="col-md-12" *ngIf="bills$.length > 0">
         <h4>{{ _translation('Results', langCode) }}</h4>
@@ -255,189 +271,4 @@
       </div>
     </div>
   </div>
-  <div class="newBill row mt-2">
-    <div class="col-md-10"></div>
-    <div class="col-md-2 col-sm-12 text-right p-1">
-      <button type="button" mat-raised-button color="primary" class="btn-block newBillButton" (click)="openDialogNewBill(true)">{{ _translation('New bill', langCode) }}</button>
-    </div>
-  </div>
 </div>
-
-<!--<div class="bills p-2" *ngIf="newBillState">-->
-  <!--<form (submit)="newBillSubmit(categoryId, subCategoryId, currencyId, title, comment, price)">-->
-    <!--<div class="row">-->
-      <!--<div class="col-md-6 col-sm-12">-->
-        <!--<h1 *ngIf="buttonSwitchMessage != 'Switch to costs!'">{{ _translation('Add new costs', langCode) }}</h1>-->
-        <!--<h1 *ngIf="buttonSwitchMessage == 'Switch to costs!'">{{ _translation('Add new profits', langCode) }}</h1>-->
-      <!--</div>-->
-      <!--<div class="col-md-6 text-right backButton col-sm-12">-->
-        <!--<button class="newBillButton" mat-button (click)="newBill(false)">Back</button>-->
-      <!--</div>-->
-
-      <!--<div class="col-md-4">-->
-        <!--<mat-form-field>-->
-          <!--<mat-label>Category</mat-label>-->
-          <!--<mat-select>-->
-            <!--<mat-option (onSelectionChange)="onChange(null, 'categoryId')" value="">-->
-              <!--<p>None</p>-->
-            <!--</mat-option>-->
-            <!--<mat-option *ngFor="let category of categories$" (onSelectionChange)="onChange(category.id, 'categoryId')"-->
-                        <!--value="category.name">-->
-              <!--<p>{{ category.name }}</p>-->
-            <!--</mat-option>-->
-          <!--</mat-select>-->
-        <!--</mat-form-field>-->
-      <!--</div>-->
-      <!--<div class="col-md-4">-->
-        <!--<mat-form-field>-->
-          <!--<mat-label>Sub category</mat-label>-->
-          <!--<mat-select>-->
-            <!--<mat-option (onSelectionChange)="onChange(null, 'subCategoryId')" value="">-->
-              <!--<p>None</p>-->
-            <!--</mat-option>-->
-            <!--<mat-option *ngFor="let sub_category of subCategories$"-->
-                        <!--(onSelectionChange)="onChange(sub_category.id, 'subCategoryId')" value="sub_category.name">-->
-              <!--<p>{{ sub_category.name }}</p>-->
-            <!--</mat-option>-->
-          <!--</mat-select>-->
-        <!--</mat-form-field>-->
-      <!--</div>-->
-      <!--<div class="col-md-4">-->
-        <!--<mat-form-field>-->
-          <!--<mat-label>Currency</mat-label>-->
-          <!--<mat-select>-->
-            <!--<mat-option (onSelectionChange)="onChange(null, 'currencyId')" value="">-->
-              <!--<p>None</p>-->
-            <!--</mat-option>-->
-            <!--<mat-option *ngFor="let currency of currencies$" (onSelectionChange)="onChange(currency.id, 'currencyId')"-->
-                        <!--value="currency.name">-->
-              <!--<p>{{ currency.code }}</p>-->
-            <!--</mat-option>-->
-          <!--</mat-select>-->
-        <!--</mat-form-field>-->
-      <!--</div>-->
-      <!--<div class="col-md-12">-->
-        <!--<mat-form-field class="w-100">-->
-          <!--<mat-label>Title</mat-label>-->
-          <!--<input type="email" matInput required name="title" [(ngModel)]="title">-->
-        <!--</mat-form-field>-->
-      <!--</div>-->
-      <!--<div class="col-md-12">-->
-        <!--<mat-form-field class="w-100">-->
-          <!--<mat-label>Comment</mat-label>-->
-          <!--<textarea matInput placeholder="I bought a new car for 10000€..." class="newBillTextarea" name="comment"-->
-                    <!--[(ngModel)]="comment"></textarea>-->
-        <!--</mat-form-field>-->
-      <!--</div>-->
-      <!--<div class="col-md-10">-->
-      <!--</div>-->
-      <!--<div class="col-md-2 text-right billPrice">-->
-        <!--<mat-form-field>-->
-          <!--<mat-label>Price</mat-label>-->
-          <!--<input type="email" matInput required name="price" placeholder="100.00" [(ngModel)]="price">-->
-        <!--</mat-form-field>-->
-      <!--</div>-->
-      <!--<div class="row">-->
-        <!--<div class="col-md-10">-->
-        <!--</div>-->
-        <!--<div class="col-md-2 text-right saveButton col-sm-12">-->
-          <!--<button type="submit" mat-raised-button color="primary" class="btn-block newBillButton">Save</button>-->
-        <!--</div>-->
-      <!--</div>-->
-
-
-    <!--</div>-->
-  <!--</form>-->
-<!--</div>-->
-
-
-
-
-
-
-<!--div class="bills p-2" *ngIf="newBillState">
-  <form (submit)="newBillSubmit(category_id, sub_category_id, currency_id, title, comment, price)">
-  <div class="row">
-    <div class="col-md-6 col-sm-12">
-      <h1>Add new costs</h1>
-    </div>
-    <div class="col-md-6 text-right backButton col-sm-12">
-      <button class="newBillButton" mat-button (click)="newBill(false)">Back</button>
-    </div>
-  </div>
-  <div class="row">
-
-    <div class="col-md-4">
-      <mat-form-field>
-        <mat-label>Category</mat-label>
-        <mat-select name="category_id" [ngModel]="category_id">
-          <mat-option (onSelectionChange)="onChange(null, 'categoryId')" value="">
-            <p>None</p>
-          </mat-option>
-          <mat-option *ngFor="let category of categories$" (selectionChange)="onChange(category.id, 'categoryId')"
-                      value="category.id">
-            <p>{{ category.name }}</p>
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </div>
-    <div class="col-md-4">
-      <mat-form-field>
-        <mat-label>Sub category</mat-label>
-        <mat-select name="sub_category_id" [ngModel]="sub_category_id">
-          <mat-option (onSelectionChange)="onChange(null, 'subCategoryId')" value="">
-            <p>None</p>
-          </mat-option>
-          <mat-option *ngFor="let sub_category of subCategories$"
-                      (selectionChange)="onChange(sub_category.id, 'subCategoryId')" value="sub_category.id">
-            <p>{{ sub_category.name }}</p>
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </div>
-    <div class="col-md-4">
-      <mat-form-field>
-        <mat-label>Currency</mat-label>
-        <mat-select name="currency_id" [ngModel]="currency_id">
-          <mat-option (selectionChange)="onChange(null, 'currencyId')" value="">
-            <p>None</p>
-          </mat-option>
-          <mat-option *ngFor="let currency of currencies$" (onSelectionChange)="onChange(currency.id, 'currencyId')"
-                      value="currency.id">
-            <p>{{ currency.code }}</p>
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </div>
-  </div>
-  <div class="col-md-12">
-    <mat-form-field class="w-100">
-      <mat-label>Title</mat-label>
-      <input type="email" matInput required name="title" [(ngModel)]="title">
-    </mat-form-field>
-  </div>
-  <div class="col-md-12">
-    <mat-form-field class="w-100">
-      <mat-label>Comment</mat-label>
-      <textarea matInput placeholder="I bought a new car for 10000€..." class="newBillTextarea" name="comment" [ngModel]="comment"></textarea>
-      Ovo zakomentirati<input type="email" matInput required name="title" [(ngModel)]="title">
-    </mat-form-field>
-  </div>
-  <div class="col-md-10">
-  </div>
-  <div class="col-md-2 text-right billPrice">
-    <mat-form-field>
-      <mat-label>Price</mat-label>
-      <input type="email" matInput required name="price" placeholder="100.00" [(ngModel)]="price">
-    </mat-form-field>
-  </div>
-  <div class="row">
-    <div class="col-md-10">
-    </div>
-    <div class="col-md-2 text-right saveButton col-sm-12">
-      <button type="submit" mat-raised-button color="primary" class="btn-block newBillButton">Save</button>
-      Ovo zakomentirati<button class="newBillButton" mat-button (click)="newBillSubmit(">Save</button>
-    </div>
-  </div>
-  </form>
-</div-->
